objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>AFSC__Ref_Replaced_Content_Document_Id__c</fullName>
        <externalId>true</externalId>
        <label>Replaced Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Replaced_Content_Document_Id__c</fullName>
        <label>DEPRECATED Replaced Content Document Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__SHA1__c</fullName>
        <label>SHA1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Warning_MAC__c</fullName>
        <label>Warning MAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>